[package]
name = "hermes-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc-proto     = { version = "0.19.1", path = "./proto" }
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
tokio = { version = "1.20.1", features = ["full"] }
